--- a/SizeInReality/package.json
+++ b/SizeInReality/package.json
@@ -4,7 +4,9 @@
   "description": "size-in-reality project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack -d --watch",
+    "prod": "webpack -p --watch"
+
   },
   "author": "",
   "license": "ISC",
